[package]
name = "merkle-log"
version = "0.0.6"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
description = "An implementation of the \"Merkle Tree-Structured Log\" defined in the paper \"Transparent Logs for Skeptical Clients.\" https://research.swtch.com/tlog"
repository = "https://github.com/sunny-g/merkle-log"
documentation = "https://docs.rs/merkle-log"
keywords = ["merkle-tree", "crypto"]
categories = ["cryptography", "data-structures"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.60"

[dependencies]
core2 = { version = "0.4", default-features = false }
thiserror = "1.0"

# optional
digest = { version = "0.10", optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
digest = { version = "0.10", features = ["std"] }
sha2 = "0.10"

[features]
default = ["serde", "std"]
std = ["core2/std", "digest?/std", "serde?/std"]

[workspace]
