[package]
name = "merkle-log"
version = "0.0.9"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
description = "An implementation of the \"Merkle Tree-Structured Log\" defined in the paper \"Transparent Logs for Skeptical Clients.\" https://research.swtch.com/tlog"
repository = "https://github.com/sunny-g/merkle-log"
documentation = "https://docs.rs/merkle-log"
keywords = ["merkle-tree", "crypto"]
categories = ["cryptography", "data-structures"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.60"

[dependencies]
core2 = { version = "0.4", default-features = false }

# optional
borsh = { version = "1.0.0-alpha.5", default-features = false, optional = true, features = [
  "derive"
] }
digest = { version = "0.10", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
thiserror = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
digest = { version = "0.10", default-features = false }
merkle-log = { path = ".", default-features = false, features = ["digest"] }
sha2 = "0.10"

[features]
default = ["std"]
std = [
  "borsh?/std",
  "core2/std",
  "digest?/std",
  "serde?/std",
  "thiserror",
]

[package.metadata.docs.rs]
features = ["std", "digest"]

[workspace]
